completed index.html and tequila sunrise recipe

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Odin Project - Recipes</title>
+    <title>The Odin Speakeasy</title>
 </head>
 <body>
-    <h1>Recipes</h1>
-        <ul><a href="./html/negroni.html">Negroni</a></ul>
-        
+
+    <img src="./photo/background.jpeg" alt="Various bottles of liquor displayed on a bar shelf." width="1900" height="600">
+    <h1><center>The Odin Speakeasy</center></h1>
+    <h2>Recipes</h2>
+        <ul>
+            <li><a href="./html/negroni.html">Negroni</a></li>
+            <li><a href="./html/whiskey_sour.html">Whiskey Sour</a></li>
+            <li><a href="./html/tequila_sunrise.html">Tequila Sunrise</a></li>
+        </ul>
+
 </body>
 </html>
