updated sunrise recipe, bold text, add description

--- a/html/tequila_sunrise.html
+++ b/html/tequila_sunrise.html
@@ -8,6 +8,8 @@
     <h1>Tequila Sunrise</h1>
     <img src="../photo/sunrise.jpeg" alt="A colorful glass of tequila sunrise. The drink is predominantly orange in color, and the bottom half of the glass is consumed by deep, blood-red hues due to the grenadine. It looks like a sunrise" height="600">
 
+    <p>Have you ever dreamt about having a nice cold drink at the beach while watching the sunset? Are you stuck at home in the midwest not close to a beach at all? <strong>THIS</strong> is the drink for you!</p>
+
     <h2>Ingredients</h2>
         <ul>
             <li>1.5 oz Tequila</li>
@@ -30,7 +32,7 @@
             <li>Add ice into the Collins Glass.</li>
             <li>Combine liquids in the glass (Tequila, Lime Juice, Orange Juice)</li>
             <li>Stir using the stirring spoon until all liquids are generously combined.</li>
-            <li>Hold stirring spoon against glass at an angle. Pour Grenadine down spoon. Do not stir.</li>
+            <li>Hold stirring spoon against glass at an angle. Pour Grenadine down spoon. <strong>Do not stir.</strong></li>
             <li>Top with orange slice and cherry for garnish.</li>
         </ol>
 
