modified css styling on index.html and all subpages

--- a/html/negroni.html
+++ b/html/negroni.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Negroni Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Negroni</h1>
-    <img src="../photo/negroni.jpg" alt="An ice-cold Negroni, served in a rocks glass. The color of the drink is a deep red and the drink is garnished with an orange slice."
+    <h1 class="recipe-head">Negroni</h1>
+    <img class="drink-image" src="../photo/negroni.jpg" alt="An ice-cold Negroni, served in a rocks glass. The color of the drink is a deep red and the drink is garnished with an orange slice."
         width="400">
 
      <p>A drink only for the classiest of chaps - this drink was created in Italy in the latter half of the 1800s. This drink will surely take your tastebuds on a ride!</p>   
     
-    <h2>Ingredients</h2>
+    <h2 class="ingredients">Ingredients</h2>
         <ul>
             <li>1 oz. Gin</li>
             <li>1 oz. Campari</li>
@@ -20,7 +21,7 @@
             <li>Ice</li>
         </ul>
 
-    <h2>Barware</h2>
+    <h2 class="barware">Barware</h2>
         <ul>
             <li>Rocks Glass</li>
             <li>Mixing Glass</li>
@@ -28,7 +29,7 @@
             <li>Hawthorne or Julep Strainer</li>
         </ul>
 
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
         <ol>
             <li>Combine your gin of choice with Campari and Sweet Vermouth in a mixing glass filled with ice.</li>
             <li>Use the stirring spoon to stir the drink until it is well-chilled.</li>
