--- a/html/whiskey_sour.html
+++ b/html/whiskey_sour.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Whiskey Sour Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Whiskey Sour</h1>
+    <h1 class="recipe-header">Whiskey Sour</h1>
 
-    <img src="../photo/sour.jpeg" alt="A pretty, hazy, deep orange drink served in a goblet-style glass, garnished with an orange slice" height="600">
+    <img class="drink-image" src="../photo/sour.jpeg" alt="A pretty, hazy, deep orange drink served in a goblet-style glass, garnished with an orange slice" height="600">
 
     <p>A concoction known for its simplicity and humble nature. A true elixir for distinguished persons.</p>
 
-    <h2>Ingredients</h2>
+    <h2 class="ingredients">Ingredients</h2>
         <ul>
             <li>2 oz. Bourbon Whiskey (the higher quality, the better)</li>
             <li>0.75 oz Lemon Juice</li>
@@ -21,14 +22,14 @@
             <li>Ice</li>
         </ul>
 
-    <h2>Barware</h2>
+    <h2 class="barware">Barware</h2>
         <ul>
             <li>Cocktail Shaker</li>
             <li>Hawthorne Strainer</li>
             <li>Rocks Glass or Goblet-Style Glass</li>
         </ul>
 
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
         <ol>
             <li>Combine liquids (simple syrup, lemon juice, whiskey) into a coctail shaker.</li>
             <li>Add ice to shaker, cover, and shake furiously.</li>
