--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>The Odin Speakeasy</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -10,9 +11,9 @@
     <h1><center>The Odin Speakeasy</center></h1>
     <h2>Recipes</h2>
         <ul>
-            <li><a href="./html/negroni.html">Negroni</a></li>
-            <li><a href="./html/whiskey_sour.html">Whiskey Sour</a></li>
-            <li><a href="./html/tequila_sunrise.html">Tequila Sunrise</a></li>
+            <li class="recipe-link"><a href="./html/negroni.html">Negroni</a></li>
+            <li class="recipe-link"><a href="./html/whiskey_sour.html">Whiskey Sour</a></li>
+            <li class="recipe-link"><a href="./html/tequila_sunrise.html">Tequila Sunrise</a></li>
         </ul>
 
 </body>
