--- a/html/tequila_sunrise.html
+++ b/html/tequila_sunrise.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Tequila Sunrise Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Tequila Sunrise</h1>
-    <img src="../photo/sunrise.jpeg" alt="A colorful glass of tequila sunrise. The drink is predominantly orange in color, and the bottom half of the glass is consumed by deep, blood-red hues due to the grenadine. It looks like a sunrise" height="600">
+    <h1 class="recipe-head">Tequila Sunrise</h1>
+    <img class="drink-image" src="../photo/sunrise.jpeg" alt="A colorful glass of tequila sunrise. The drink is predominantly orange in color, and the bottom half of the glass is consumed by deep, blood-red hues due to the grenadine. It looks like a sunrise" height="600">
 
     <p>Have you ever dreamt about having a nice cold drink at the beach while watching the sunset? Are you stuck at home in the midwest not close to a beach at all? <strong>THIS</strong> is the drink for you!</p>
 
-    <h2>Ingredients</h2>
+    <h2 class="ingredients">Ingredients</h2>
         <ul>
             <li>1.5 oz Tequila</li>
             <li>1 oz. Lime Juice (Fresh-Squeezed Preferred)</li>
@@ -21,13 +22,13 @@
             <li>Ice</li>
         </ul>
 
-    <h2>Barware</h2>
+    <h2 class="barware">Barware</h2>
         <ul>
             <li>Collins Glass</li>
             <li>Stirring Spoon</li>
         </ul>
 
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
         <ol>
             <li>Add ice into the Collins Glass.</li>
             <li>Combine liquids in the glass (Tequila, Lime Juice, Orange Juice)</li>
