updated index.html css classes for formatting

--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
 </head>
 <body>
 
-    <img src="./photo/background.jpeg" alt="Various bottles of liquor displayed on a bar shelf." width="1900" height="600">
+    <img class="home-image" src="./photo/background.jpeg" alt="Various bottles of liquor displayed on a bar shelf.">
     <h1><center>The Odin Speakeasy</center></h1>
-    <h2>Recipes</h2>
-        <ul>
-            <li class="recipe-link"><a href="./html/negroni.html">Negroni</a></li>
-            <li class="recipe-link"><a href="./html/whiskey_sour.html">Whiskey Sour</a></li>
-            <li class="recipe-link"><a href="./html/tequila_sunrise.html">Tequila Sunrise</a></li>
-        </ul>
-
+    <h2 class="home-recipes">Recipes</h2>
+            <li class="recipe-link"><a class="link" href="./html/negroni.html">Negroni</a></li>
+            <li class="recipe-link"><a class="link" href="./html/whiskey_sour.html">Whiskey Sour</a></li>
+            <li class="recipe-link"><a class="link" href="./html/tequila_sunrise.html">Tequila Sunrise</a></li>
 </body>
 </html>
