fix spelling mistake

--- a/html/whiskey_sour.html
+++ b/html/whiskey_sour.html
@@ -31,7 +31,7 @@
 
     <h2 class="steps">Steps</h2>
         <ol>
-            <li>Combine liquids (simple syrup, lemon juice, whiskey) into a coctail shaker.</li>
+            <li>Combine liquids (simple syrup, lemon juice, whiskey) into a cocktail shaker.</li>
             <li>Add ice to shaker, cover, and shake furiously.</li>
             <li>Strain shaken cocktail through strainer into glassware filled with ice.</li>
             <li>Garnish with cherry and orange slice.</li>
